--- a/margin-and-padding/01-margin-and-padding-1/style.css
+++ b/margin-and-padding/01-margin-and-padding-1/style.css
@@ -1,14 +1,18 @@
 body {
   max-width: 600px;
   margin: 0 auto;
+  font-family: 'Arial', serif;
 }
 
 .one {
   background: pink;
   border: 3px solid blue;
   /* CHANGE ME */
-  padding: 0px;
-  margin: 0px;
+  padding-top: 30px;
+  padding-bottom: 30px;
+  padding-left: 30px;
+  padding-right: 100px;
+  margin: 10px;
 }
 
 .two {
@@ -23,6 +27,8 @@ body {
   border: 3px solid brown;
   width: 200px;
   /* CHANGE ME */
-  padding: 0px;
-  margin-left: 0px;
+  padding: 30px;
+  padding-right: 50px;
+  margin-left: 300px;
+  margin-top: 30px;
 }
