--- a/margin-and-padding/02-margin-and-padding-2/style.css
+++ b/margin-and-padding/02-margin-and-padding-2/style.css
@@ -5,23 +5,37 @@ body {
 
 .card {
   width: 400px;
+  padding: 8px;
   background: #fff;
   margin: 16px auto;
+  font-size: 16px;
 }
 
 .title {
   background: #e3f4ff;
+  font-weight:700;
+  padding: 8px;
 }
 
 .content {
   background: #e3f4ff;
+  padding: 8px;
+  margin-bottom: 8px;
 }
 
 .button-container {
   background: #e3f4ff;
+  align-self: center;
+  padding: 8px;
+  
+  text-align: center;
 }
 
 button {
   background: white;
   border: 1px solid #eee;
+  display:block;
+  padding: 16px;
+  margin: auto;
+
 }
