--- a/flex/02-flex-header/style.css
+++ b/flex/02-flex-header/style.css
@@ -1,6 +1,11 @@
 .header  {
-  font-family: monospace;
+  font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, serif;
   background: papayawhip;
+  display: flex;
+  padding: 10px;
+
+  align-items: center;
+  justify-content: space-around;
 }
 
 .logo {
@@ -9,11 +14,21 @@
   color: tomato;
   background: white;
   padding: 4px 32px;
+  flex: 0 0 auto;
+
 }
 
 ul {
   /* this removes the dots on the list items*/
   list-style-type: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  justify-content: space-evenly;
+}
+
+li {
+  margin: 10px;
 }
 
 a {
@@ -22,4 +37,12 @@ a {
   padding: 8px;
   /* this removes the line under the links */
   text-decoration: none;
+}
+
+.left-links{
+  margin-right: auto;
+}
+
+.right-links{
+  margin-left: auto;
 }
